# kite-services

./: .env.backup  .env.example  .env.prod  .env.production  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CI_CD_SUMMARY.md  Dockerfile  FINAL-STATUS-REPORT.md  FINAL_SUMMARY.md  GAPS-FIXED-REPORT-2026-02-13.md  MONITOR_PIPELINE.md  PHASE1_PHASE2_SUMMARY.md  PUSH_NOW.sh  PUSH_TO_GIT.md  QUICK_START.md  README.md  SETUP_SECRETS.md  TESTING_QUICK_REFERENCE.md  VERIFICATION-REPORT-2026-02-13.md  check_token_status.py  demo_real_data.py  deploy_to_prod.sh  deploy_to_staging.sh  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  find_existing_token.py  fix_prod.sh  generate_token_from_request.py  get_fresh_token.py  kite-service-requirements.md  kite_token.json.example  kite_token_manager.py  prepare_git.sh  (+8 more)
deploy/: README.md  deploy-prod.sh  deploy-staging.sh
docs/: API_CONSOLIDATION_COMPLETE.md  API_INTEGRATION_GUIDE_PRODUCTION.md  API_QUICK_REFERENCE.md  CACHE_STRATEGY_DETAILED.md  CACHING_AUDIT_KITE_FIRST.md  CI_CD_PIPELINE.md  COMPLETE_STATUS.md  COMPLETE_TOKEN_FLOW.md  DATA_CONTRACT_V1.md  ENHANCED_MARKET_CONTEXT.md  GIT_SETUP.md  INTEGRATION_GUIDE.md  MARKET_CONTEXT_MIGRATION.md  MIGRATION_SUMMARY.md  PRE_COMMIT_SETUP.md  PRE_PRODUCTION_TESTS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_MONITORING.md  PROJECT_SUMMARY.md  QUICK_MONEY_OPPORTUNITIES.md  README.md  REAL_DATA_FEASIBILITY.md  SERVICE_ANALYSIS.md  TEST_RELIABILITY.md  TOKEN_MANAGEMENT.md  TOKEN_STATUS_API.md  UNIFIED_API_GUIDE.md  V3_ML_MARKET_INTELLIGENCE_API_GUIDE.md  api-integration-doc.md  api-integration-guide.md  api-testing-guide.md  api.md  apis-used.md  architecture.md  config.md  consolidated-api.md  data-models.md  dev-server-curl-tests.md  endpoint-testing-results.md  (+11 more)
(+153 files in other folders)
